# aqua-remote

./: .gitignore  README.md  pyproject.toml
src/: cli.py  monitor.py  notify.py  setup.py  watchdog.sh
