[project]
name = "aqua-remote"
version = "0.1.0"
description = "Auto-recover Claude Code Remote Control links and get notified"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "prezis"},
]
keywords = ["claude", "remote-control", "tmux", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/prezis/aqua-remote"
Repository = "https://github.com/prezis/aqua-remote"
